--- a/GS_show/show.html
+++ b/GS_show/show.html
@@ -1,12 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Google Script Web App</title>
-</head>
-<body>
-       <iframe width="100%" height="500px" frameborder="0" src="https://script.google.com/macros/s/AKfycbzWeiHpTfn2zIwSAGczH9RshzPItrp0MrW0RifqOpVBonVQ8OdsikElplY9QzkTrH_X/exec"></iframe>
-</body>
+<div>
+    <label for="date">日期：</label>
+    <input type="date" id="date">
+  </div>
+  <br>
+  <form>
+    <div>
+      <label for="name">姓名：</label>
+        <select id="myAddress" name="myAddress">
+          <option>黃欽煌</option>
+          <option>黃世杰</option>
+            <option>黃世昇</option>
+            <option>黃世欣</option>
+            <option>黃世林</option>
+          </optgroup>
+        </select>
+      </div>
+      <br>
 
+<div>
+      <label for="name">確認：</label>
+        <select id="myAddress" name="myAddress">
+          <option>✔===金額已核對,沒有問題===✔</option>
+          <option>✘===金額已核對,數目不符===✘</option>
+          </optgroup>
+        </select>
+      </div>
+      <br>
+      <div>
+        <label for="name">👌👌：</label>
+        <button type="submit">送出表單</button>
+      </div>
+    </form>
